html css first commit

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Landing Page</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Hello!</h1>
+    <header id="header">
+  <img src="https://ng.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/47/124177/1.jpg?9117" alt="logo" id="header-img">
+  <nav id="nav-bar">
+    <ul> 
+      <li><a href="#header" class="nav-link">header</a></li>
+      <li><a href="#footer" class="nav-link">footer</a></li>
+      <li><a href="#menu" class="nav-link">menu</a></li>
+  </nav>
+</header>
+<iframe id="video" src="https://youtu.be/syT88OSUA8o"></iframe>
+<form id="form" action="https://www.freecodecamp.com/email-submit">
+  <input id="email" placeholder="your email address" type="email" name="email"></input>
+  <input id="submit" type="submit"></input>
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer id="footer"></footer>
+    <menu id="menu"></menu>
+    
   </body>
 </html>
+  
