iframe title added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="#menu" class="nav-link">menu</a></li>
   </nav>
 </header>
-<iframe id="video" src="https://youtu.be/syT88OSUA8o"></iframe>
+<iframe id="video" src="https://youtu.be/syT88OSUA8o" title="system video"></iframe>
 <form id="form" action="https://www.freecodecamp.com/email-submit">
   <input id="email" placeholder="your email address" type="email" name="email"></input>
   <input id="submit" type="submit"></input>
