yarn format changes

--- a/index.html
+++ b/index.html
@@ -16,27 +16,16 @@
       <li><a href="#menu" class="nav-link">menu</a></li>
   </nav>
 </header>
+<main id="menu">
 <iframe id="video" src="https://youtu.be/syT88OSUA8o" title="system video"></iframe>
+</main>
+
+<footer id="footer">
 <form id="form" action="https://www.freecodecamp.com/email-submit">
   <input id="email" placeholder="your email address" type="email" name="email"></input>
   <input id="submit" type="submit"></input>
 </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <footer id="footer"></footer>
-    <menu id="menu"></menu>
-    
+</footer>
   </body>
 </html>
   
