--- a/index.html
+++ b/index.html
@@ -7,29 +7,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header id="header">
-      <img
-        src="https://ng.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/47/124177/1.jpg?9117"
-        alt="logo"
-        id="header-img"
-      />
-      <nav id="nav-bar">
-        <ul>
-          <li><a href="#header" class="nav-link">header</a></li>
-          <li><a href="#footer" class="nav-link">footer</a></li>
-          <li><a href="#menu" class="nav-link">menu</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main id="menu">
-      <iframe id="video" src="https://youtu.be/syT88OSUA8o" title="system video"></iframe>
-    </main>
+    <div id="page-wrapper">
+      <header id="header">
+        <div class="logo">
+          <img
+            id="header-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+            alt="original trombones logo"/>
+        </div>
 
-    <footer id="footer">
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input id="email" placeholder="your email address" type="email" name="email" />
-        <input id="submit" type="submit" />
-      </form>
-    </footer>
+
+
+
+
+
+
+
   </body>
 </html>
