--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
             alt="original trombones logo"/>
         </div>
+        <nav id="nav-bar">
+          <ul>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+            <li><a class="nav-link" href="#pricing">Pricing</a></li>
+          </ul>
+        </nav>
+      </header>
 
 
 
