--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
             </ol>
             <button class="btn">Select</button>
           </div>
+          <div class="product" id="bass">
+            <div class="level">Bass Trombone</div>
+            <h2>$900</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
 
 
 
