--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
           <img
             id="header-img"
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
-            alt="original trombones logo"/>
+            alt="original trombones logo"
+          />
         </div>
         <nav id="nav-bar">
           <ul>
@@ -44,8 +45,8 @@
             <div class="desc">
               <h2>Premium Materials</h2>
               <p>
-                Our trombones use the shiniest brass which is sourced locally.
-                This will increase the longevity of your purchase.
+                Our trombones use the shiniest brass which is sourced locally. This will increase
+                the longevity of your purchase.
               </p>
             </div>
           </div>
@@ -54,9 +55,8 @@
             <div class="desc">
               <h2>Fast Shipping</h2>
               <p>
-                We make sure you recieve your trombone as soon as we have
-                finished making it. We also provide free returns if you are not
-                satisfied.
+                We make sure you recieve your trombone as soon as we have finished making it. We
+                also provide free returns if you are not satisfied.
               </p>
             </div>
           </div>
@@ -67,9 +67,8 @@
             <div class="desc">
               <h2>Quality Assurance</h2>
               <p>
-                For every purchase you make, we will ensure there are no damages
-                or faults and we will check and test the pitch of your
-                instrument.
+                For every purchase you make, we will ensure there are no damages or faults and we
+                will check and test the pitch of your instrument.
               </p>
             </div>
           </div>
@@ -77,6 +76,7 @@
         <section id="how-it-works">
           <iframe
             id="video"
+            title="vid"
             height="315"
             src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
             frameborder="0"
